--- a/style/style.css
+++ b/style/style.css
@@ -2,9 +2,7 @@
 	margin: 0;
 	padding: 0;
 }
-li{
-	list-style-type: none;
-}
+
 
 
 .wrapper{
@@ -40,6 +38,10 @@ li{
 .main .container{
 	padding-left: 103px;
 	padding-top: 70px; 
+}
+
+.main li{
+	list-style-type: none;
 }
 
 .main ul li{
@@ -118,7 +120,9 @@ li{
 	padding-top: 60px;
 	padding-left: 103px;
 }
-
+.essay .content{
+	float: left;
+}
 .essay .content h2{
   width: 341px;
   height: 20px;
@@ -131,4 +135,65 @@ li{
   letter-spacing: normal;
   color: #290b7c;
   padding-bottom: 20px;
+}
+
+.essay .content .text{
+	width: 750px;
+	height: 506px;
+	font-family: Montserrat;
+	font-size: 16px;
+	font-weight: normal;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.5;
+	letter-spacing: normal;
+	color: #333333;
+	color: var(--black);
+}
+.essay .content .text a{
+	color: #6032e0;
+}
+
+
+.essay .sidebar{
+	float: left;
+	margin-left: 70px;
+}
+.essay .sidebar .card {
+  width: 340px;
+  height: 500px;
+  border-radius: 24px;
+  background-color: #ffffff;
+  box-shadow: 2px 4px 25px 0 rgba(0, 0, 0, 0.08);
+}
+
+.essay .sidebar .card h2{
+	width: 217px;
+	height: 68px;
+	font-family: Montserrat;
+	font-size: 24px;
+	font-weight: 600;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.42;
+	letter-spacing: normal;
+	color: #290b7c;
+	padding-left: 35px;
+	padding-top: 50px;
+}
+
+.essay .sidebar .card li{
+	width: 270px;
+	height: 48px;
+	font-family: Montserrat;
+	font-size: 18px;
+	font-weight: normal;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.33;
+	letter-spacing: normal;
+	color: #333333;
+	color: var(--black);
+	padding-left: 45px;
+	padding-top: 31px;
 }
